@@ -1,3 +1,4 @@
+from __future__ import with_statement
 from zope.publisher.browser import BrowserView
 from zope.location.interfaces import ILocation
 from tempfile import TemporaryFile
@@ -10,12 +11,12 @@ class DownloadView(BrowserView):
         filename = "filecontent"
         if ILocation.providedBy(self.context):
             filename = self.context.__name__
-        tmpfile = TemporaryFile()
-        tmpfile.write(self.context.data)
-        tmpfile.seek(0)
-        self.request.response.setHeader('Content-disposition', 'attachment; filename="%s"' % filename.encode('utf-8'))
-        self.request.response.setHeader('Content-length', self.context.getSize())
-        self.request.response.setHeader('Content-Type', self.context.contentType)
-        return tmpfile.read()
+        with TemporaryFile() as tmpfile:
+            tmpfile.write(self.context.data)
+            tmpfile.seek(0)
+            self.request.response.setHeader('Content-disposition', 'attachment; filename="%s"' % filename.encode('utf-8'))
+            self.request.response.setHeader('Content-length', self.context.getSize())
+            self.request.response.setHeader('Content-Type', self.context.contentType)
+            return tmpfile.read()
 
 
