@@ -1,0 +1,19 @@
+<h2 i18n:translate="" >Export as a zip file</h2>
+
+<p i18n:translate="">
+You can download the whole folder as a zip file by clicking on the button below.
+Beware that big projects can take a lot of time to compress and download!
+</p>
+
+<form action="exportdownload" method="post">
+
+  <div class="controls">
+    <input type="submit"
+           name="do_export"
+           value="Export"
+           i18n:attributes="value export-button"/>
+  </div>
+
+</form>
+
+
